--- a/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.html
+++ b/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.html
@@ -10,9 +10,9 @@
 		</section>
 
 		<script>
-			var myDesktop = new Desktop(
-				/* TODO: myDesktop 인스턴스의 생성자의 변수로 무엇이 들어가야 할까요? */
-			);
+			var imgNum = prompt("Please enter number of images",1);
+			var folderNum = prompt("Please enter number of folders",2);
+			var myDesktop = new Desktop(imgNum,folderNum);
 		</script>
 	</body>
 </html>
