--- a/Part 2. JavaScript/Quest 05. Playing with DOM/skeleton/quest.html
+++ b/Part 2. JavaScript/Quest 05. Playing with DOM/skeleton/quest.html
@@ -1,3 +1,8 @@
+<!--
+Reference for JavaScript Closure
+	https://medium.com/javascript-scene/master-the-javascript-interview-what-is-a-closure-b2f0d2152b36#.4cmd1zb7y
+-->
+
 <!DOCTYPE html>
 <html>
 	<head>
