Code Refactoring to change Object Structure/Method && Add function of hide button

--- a/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.html
+++ b/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.html
@@ -10,9 +10,9 @@
 		</section>
 
 		<script>
-			var imgNum = prompt("Please enter number of images",1);
+			var iconNum = prompt("Please enter number of icons",1);
 			var folderNum = prompt("Please enter number of folders",2);
-			var myDesktop = new Desktop(imgNum,folderNum);
+			var myDesktop = new Desktop(iconNum,folderNum);
 		</script>
 	</body>
 </html>
