--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/index.html
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/index.html
@@ -6,7 +6,7 @@
 		<script src="/notepad.js"></script>
 	</head>
 	<body>
-		<!-- TODO: 이 곳을 채워 클라이언트를 만들어 보세요 -->
+		<section class="notepad"></section>
 		<script>
 			var notepad = new Notepad();
 		</script>
