Setup basic server/client side css&javascript&html && install bower/jquery

--- a/Part 5. Modern web/Quest 18. WebSocket/client/desktop.html
+++ b/Part 5. Modern web/Quest 18. WebSocket/client/desktop.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="./desktop.css">
 		<script src="./desktop.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	</head>
 	<body>
 		<section class="desktop">
