--- a/Part 5. Modern web/Quest 18. WebSocket/client/canvas.html
+++ b/Part 5. Modern web/Quest 18. WebSocket/client/canvas.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Original Canvas</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="./desktop.css">
-		<script src="./desktop.js"></script>
+		<link rel="stylesheet" href="./canvas.css">
+		<script src="./canvas.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	</head>
