Setup basic page movement with buttons(Quest18)

--- a/Part 5. Modern web/Quest 18. WebSocket/client/find_your_room.html
+++ b/Part 5. Modern web/Quest 18. WebSocket/client/find_your_room.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Find Your Room</title>
     <meta charset="UTF-8">
-		<link rel="stylesheet" href="./find_your_room.css">
+    <link rel="stylesheet" href="./find_your_room.css">
+    <script src="./find_your_room.js"></script>
   </head>
   <body>
     <div class="ct">
       <div>
-        <span id="headline">
+        <span class="headline">
           Your Original Canvas
         </span>
       </div>
@@ -20,5 +20,8 @@
         </section>
       </div>
     </div>
+    <script>
+      var find_function = new findRoom();
+    </script>
   </body>
 </html>
