--- a/Part 5. Modern web/Quest 18. WebSocket/client/create_your_room.html
+++ b/Part 5. Modern web/Quest 18. WebSocket/client/create_your_room.html
@@ -3,19 +3,15 @@
   <head>
     <title>Welcome to Canvas</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./create_your_room.css">
-    <link rel="stylesheet" href="./find_your_room.css">
-		<link rel="stylesheet" href="./canvas.css">
+    <link rel="stylesheet" href="./create_your_room.css" id="style-create_your_room">
     <script src="./create_your_room.js"></script>
-    <script src="./canvas.js"></script>
-    <script src="./find_your_room.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
   <body>
     <div class="ct">
       <div>
-        <span id="headline">
+        <span class="headline">
           Create Your Own Canvas
         </span>
       </div>
@@ -31,7 +27,8 @@
       </div>
     </div>
     <script>
-      var socket = io.connect('http://localhost:8080');
+      var socket = io.connect('/');
+      Canvas.on(socket);
     </script>
   </body>
 </html>
