--- a/Part 5. Modern web/Quest 18. WebSocket/client/create_your_room.html
+++ b/Part 5. Modern web/Quest 18. WebSocket/client/create_your_room.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Canvas</title>
+    <title>Your Original Canvas</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./create_your_room.css" id="style-create_your_room">
     <script src="./create_your_room.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <div class="ct">
