--- a/Part 5. Modern web/Quest 18. WebSocket/client/app.html
+++ b/Part 5. Modern web/Quest 18. WebSocket/client/app.html
@@ -3,8 +3,8 @@
   <head>
     <title>Your Original Canvas</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./create_your_room.css" id="style-create_your_room">
-    <script src="./create_your_room.js"></script>
+    <link rel="stylesheet" href="./app.css">
+    <script src="./app.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -29,7 +29,7 @@
     </div>
     <script>
       var socket = io.connect('/');
-      Canvas.on(socket);
+      App.on(socket);
     </script>
   </body>
 </html>
