--- a/Part 5. Modern web/Quest 18. WebSocket/client/find_your_room.html
+++ b/Part 5. Modern web/Quest 18. WebSocket/client/find_your_room.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./find_your_room.css">
+    <script src="./app.js"></script>
     <script src="./find_your_room.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <div class="ct">
@@ -21,7 +24,7 @@
       </div>
     </div>
     <script>
-      var find_function = new findRoom();
+      findRoom.on(App.getSocket());
     </script>
   </body>
 </html>
